# docs-mcp-server

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT.md  AGENTS.md  ARCHITECTURE_ANALYSIS_REPORT.md  CLAUDE.md  COMPLETE_IMPLEMENTATION.md  CRITICAL_DEAD_CODE_ANALYSIS.md  Dockerfile  FINAL_PLAN_ASSESSMENT.md  FRAUD_REMEDIATION_COMPLETE.md  LICENSE  PHASE1_IMPLEMENTATION.md  PLAN_STATUS_UPDATE.md  PR_DESCRIPTION.md  README.md  SKILLS.md  SQLITE_PERFORMANCE_REPORT.md  SQLITE_STORAGE_PLAN.md  analyze_architecture.py  architecture_analysis.json  bench_mcp_overhead.py  benchmark_80_tenants.py  benchmark_current_state.py  benchmark_report.txt  benchmark_results_django_1768159567.json  benchmark_results_django_1768159770.json  benchmark_search.py  benchmark_storage.py  ci_mcp_test.py  cleanup_segments.py  complete_validation_results.json  comprehensive_5_tenant_benchmark.py  comprehensive_benchmark_results.txt  coverage.json  debug_multi_tenant.py  (+26 more)
.agents/skills/add-tenant/: SKILL.md
.agents/skills/apple-docc-tenant/: SKILL.md
.agents/skills/clean-refactor/: SKILL.md
.agents/skills/coverage/: SKILL.md
.agents/skills/dead-code-audit/: SKILL.md
.agents/skills/docs-rewrite/: SKILL.md
.agents/skills/validate/: SKILL.md
.claude/: settings.json
.claude/rules/: docs.md  engineering.md  prp.md  search.md  testing.md  validation.md
.claude/skills/add-tenant/: SKILL.md
.claude/skills/bug-fix/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/simplify/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: PRP-README.md  docs.instructions.md  gh-cli.instructions.md  search.instructions.md  software-engineering-principles.instructions.md  techdocs.instructions.md  tests.instructions.md  validation.instructions.md
.github/prompts/: addOnlineTenant.prompt.md  alignDocsSection.prompt.md  bugFixRapidResponse.prompt.md  cleanCodeRefactor.prompt.md  commentIntentAudit.prompt.md  coverageHandoff.prompt.md  deadCodeAudit.prompt.md  docsRealityCheck.prompt.md  docsRewrite.prompt.md  featureSliceDelivery.prompt.md  iterativeCodeSimplification.prompt.md  prpPlanOnly.prompt.md  researchIdeation.prompt.md  testHardening.prompt.md  visualDocsQA.prompt.md
.github/prp/: docs-mcp-server-observability-prp.md
.github/workflows/: ci.yml  docs.yml
.kiro/steering/: code-conventions.md  development-workflow.md  product.md  structure.md  tech.md  testing-standards.md
ci-mcp-data/fastapi-ci/advanced/: security.md
ci-mcp-data/fastapi-ci/tutorial/: first-steps.md  path-parameters.md
ci-mcp-data/local-ci/__search_segments/: manifest.json
ci-mcp-data/local-ci/api-reference/: tools.md
ci-mcp-data/local-ci/getting-started/: index.md
ci-mcp-data/local-ci/user-guide/: search.md
ci-mcp-data/mkdocs-ci/__search_segments/: manifest.json
ci-mcp-data/mkdocs-ci/dev-guide/: themes.md
ci-test-data/__search_segments/: manifest.json
ci-test-data/api-reference/: index.md
ci-test-data/getting-started/: index.md
ci-test-data/user-guide/: index.md
cli/: Makefile  go.mod
cli/cmd/docsearch/: describe.go  (+10 more)
demos/: local-proof.md
docs/: contributing.md  index.md
docs/explanations/: architecture.md  cosmic-python.md  observability.md  runtime-modes-and-starlette.md  search-ranking.md  sync-strategies.md
docs/how-to/: boot-index-audit.md  configure-git-tenant.md  configure-log-profiles.md  configure-online-tenant.md  create-demo-artifacts.md  debug-crawlers.md  deploy-docker.md  evaluate-runtime-modes.md  maintain-apple-developer-docs.md  preview-docs-locally.md  trigger-syncs.md  tune-search.md  vacuum-search-segments.md
docs/reference/: cli-commands.md  core-library-map.md  deployment-json-schema.md  entrypoint-walkthrough.md  environment-variables.md  mcp-tools.md  python-api.md
docs/tutorials/: adding-first-tenant.md  custom-search.md  getting-started.md  lightning-talk-walkthrough.md
integration_tests/: __init__.py  ci_mcp_test.py  sample_data.py  signoz_smoke_test.py
scripts/: apple_docc_snapshot.py  apple_ios_app_dev_corpus.sh  apple_rendered_link_bfs.py  build_test_fixtures.py  lint-comprehensive.sh  run_parity_test.py  security-check.sh  setup-cross-agent.sh  signoz-alerts-sync.py  signoz-dashboards-sync.py  signoz-observability-restart  signoz-provision.py  signoz_api.py  vacuum_segments.py  validate.sh
src/docs_mcp_server/: __init__.py  __main__.py  app.py  app_builder.py  config.py  deployment_config.py  deterministic_tenant.py  documentation_search_engine.py  index_audit.py  production_tenant.py  registry.py  root_hub.py  simple_tenant.py  tenant.py  zero_dependency_tenant.py
test-docs/: benchmarks.md  sqlite-storage.md
test-docs/__search_segments/: manifest.json
tests/: conftest.py  test_app.py  test_config.py  test_main.py  test_models.py  test_scheduler_service.py  test_sync_scheduler.py
tests/fixtures/: ci_deployment.json  parity_test_corpus.py
tests/integration/: test_sync_crawl_persistence.py  test_tenant_parity.py
tests/unit/: __init__.py  conftest.py  test_app_builder_endpoints.py  test_app_builder_more.py  test_app_main.py  test_app_unit.py  test_apple_docc_snapshot.py  test_apple_rendered_link_bfs.py  test_bloom_filter.py  test_bloom_index.py  test_boot_audit_service.py  test_boot_audit_service_unit.py  test_cache_service.py  test_cache_service_offline.py  test_config_helpers.py  test_config_more.py  test_crawl_state_store.py  test_crawler.py  test_crawler_client.py  test_crawler_core.py  test_crawler_coverage.py  test_crawler_fetch_strategies.py  test_cron_schedule.py  test_deployment_config.py  test_deployment_config_more.py  test_deterministic_tenant.py  test_doc_fetcher.py  test_doc_fetcher_unit.py  test_documentation_search_engine.py  test_domain_model.py  test_filesystem_repository.py  test_filesystem_unit_of_work.py  test_filesystem_unit_of_work_more.py  test_fixture_search.py  test_front_matter_unit.py  test_git_sync.py  test_git_sync_scheduler_service.py  test_git_sync_scheduler_service_more.py  test_git_sync_scheduler_service_unit.py  test_index_audit.py  (+65 more)
(+159 files in other folders)
