[project]
name = "docs-mcp-server"
version = "0.0.2"
description = "Multi-tenant MCP server for documentation search — aggregates websites, git repos, and local files via BM25"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "DRF MCP Team", email = "opensource@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]
dependencies = [
    "fastmcp>=2.14.3",
    "aiohttp>=3.13.3",
    "html2text>=2025.4.15",
    "fake-useragent>=2.2.0",
    "uv>=0.9.26",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "jinja2>=3.1.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "click>=8.3.1",
    "rich>=14.2.0",
    "cron-converter>=1.3.1",
    "playwright>=1.57.0",
    "pyrefly>=0.48.2",
    "orjson>=3.11.5",
    "justhtml>=0.40.0",
    "article-extractor[all]>=0.5.5",
    "psutil>=7.2.1",
    # Observability (OpenTelemetry-aligned)
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-starlette>=0.60b1",
    "prometheus-client>=0.24.1",
]

[project.scripts]
docs-cli = "docs_mcp_server.cli:main"
docs-mcp-server = "docs_mcp_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src/docs_mcp_server"]


[project.urls]
Homepage = "https://github.com/pankaj28843/docs-mcp-server"
"Bug Tracker" = "https://github.com/pankaj28843/docs-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "commitizen>=4.12.0",
    "hatch>=1.16.2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "aioresponses>=0.7.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.20",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
    "fastmcp>=2.14.3",
    "ruff>=0.14.13",
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "ruff format --check"
]
format-fix = [
    "ruff format"
]
lint-check = [
    "ruff check"
]
lint-fix = [
    "ruff check --fix"
]

[tool.hatch.envs.default.scripts]
list = [
    "echo 'Scripts commands available for default env:'; hatch env show --json | jq --raw-output '.default.scripts | keys[]'"
]
format = [
  "hatch fmt --formatter",
]
lint = [
    "hatch fmt --linter"
]

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["src/**/*.py", "tests/**/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "htmlcov",
    "external-sources",
    "mcp-data",
    "tmp",
]

# ============================================================================
# Ruff Configuration - Linting and Formatting
# ============================================================================
# NOTE: If VS Code shows TOML schema errors on [tool.ruff.lint.*] sections,
# these are FALSE POSITIVES from the even-better-toml extension's outdated schema.
# Ruff itself validates this configuration correctly (verified: "All checks passed!").
# To disable these false positives: set "evenBetterToml.schema.enabled": false
# in .vscode/settings.json (already configured).
# ============================================================================

[tool.ruff.lint]
# Enable comprehensive rule sets for maximum auto-fixing
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (includes F401 unused imports - auto-fixed)
    "I",     # isort (import sorting - auto-fixed)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize syntax - auto-fixed)
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas (auto-fixed)
    "C4",    # flake8-comprehensions (auto-fixed)
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat (auto-fixed)
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie (auto-fixed)
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes (auto-fixed)
    "RSE",   # flake8-raise (auto-fixed)
    "RET",   # flake8-return (auto-fixed)
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify (auto-fixed)
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking (auto-fixed)
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib (auto-fixed)
    "ERA",   # eradicate (commented-out code - auto-fixed)
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt (auto-fixed)
    "PERF",  # perflint
    "RUF",   # ruff-specific rules (many auto-fixed)
]

# Ignore specific rules that conflict with formatter or our coding style
ignore = [
    "E501",    # line too long (handled by formatter)
    "ISC001",  # conflicts with formatter
    "COM812",  # conflicts with formatter
    "PLR2004", # magic value comparison (too restrictive)
    "TRY003",  # long exception messages (sometimes necessary for clarity)
    "G004",    # logging f-string (f-strings are more readable and modern)
    "G201",    # logging.exception vs .error(exc_info=True) - both are valid
    "TRY300",  # consider else block (often less readable)
    "TRY400",  # use logging.exception - we prefer explicit exc_info control
    "TID252",  # relative imports (standard pattern in Python packages)
    "TC001",   # type checking imports (we don't use TYPE_CHECKING blocks)
    "TC003",   # type checking imports (we don't use TYPE_CHECKING blocks)
    "RET504",  # unnecessary assignment before return (aids readability)
    "SIM102",  # nested if (more readable with comments explaining each condition)
    "SIM103",  # return negated condition (explicit is better than implicit)
    "SIM105",  # contextlib.suppress (try-except-pass is clearer and more explicit)
    "PERF203", # try-except in loop (acceptable for error handling)
    "ARG001",  # unused function argument (needed for protocols/interfaces)
    "ARG002",  # unused method argument (needed for protocols/interfaces)
    "SLF001",  # private member access (acceptable in related modules)
    "PLR0915", # too many statements (case-by-case basis)
]

# Allow autofix for all enabled rules (including F401 unused imports)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have more relaxed rules
"tests/**/*.py" = [
    "INP001",  # implicit namespace package (tests don't need __init__.py)
    "DTZ001",  # datetime without timezone (test data)
    "TRY301",  # abstract raise (test error simulation)
    "ARG001",  # unused function arguments (test fixtures)
    "ARG002",  # unused method arguments (test fixtures)
    "ARG003",  # unused classmethod arguments in stubs
    "ARG005",  # unused lambda args in monkeypatches
    "SLF001",  # private member access (testing internals)
    "PLR0913", # too many arguments (test setup)
    "PLR2004", # magic values (test data)
    "SIM117",  # nested context managers in tests
    "F841",    # intentional unused variables in assertions
    "N806",    # mixed-case fixture stubs
    "A001",    # builtins shadowed in tests
    "C416",    # comprehension copies in tests
    "RUF059",  # unused unpacked variables
    "PT018",   # combined assertions
    "T201",    # print used for debugging
    "TRY002",  # broad exception types in tests
    "DTZ005",  # naive datetime in tests
    "N805",    # non-self first arg for helpers
]
# Debug and migration scripts
"debug_multi_tenant.py" = ["T201", "PLR0912", "PLR0915"]
"migrate_es_to_filesystem.py" = ["T201", "PLR0912", "PLR0915"]
"fetch_test.py" = ["T201"]
"commit_corpus_batch.py" = ["T201", "PLR0912"]
"sample_keywords.py" = ["T201"]
"test_preprocessing.py" = ["T201"]
# Utils with debug prints
"src/docs_mcp_server/utils/sitemap_parser.py" = ["T201"]

[tool.ruff.lint.isort]
# Import ordering: stdlib, third-party, first-party, local
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["docs_mcp_server"]
known-third-party = [
    "aiohttp",
    "click",
    "fake_useragent",
    "fastmcp",
    "html2text",
    "httpx",
    "lxml",
    "pydantic",
    "pydantic_settings",
    "pytest",
]
# Force imports to top of file
force-sort-within-sections = true
# Separate imports by type
lines-after-imports = 2
# Combine as imports
combine-as-imports = true
# Split on trailing comma
split-on-trailing-comma = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"
# Format code examples in docstrings
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto",
    "-m", "not integration",
    "--cov=src/docs_mcp_server",
    "--cov-fail-under=95",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
timeout = 60
timeout_method = "thread"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require external services",
    "slow: Tests that are slow to run",
    "api: Tests that test API endpoints",
    "cache: Tests that test cache functionality",
    "search: Tests that test search functionality",
    "fetch: Tests that test document fetching",
    "scheduler: Tests that test sync scheduler",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
bump_message = "chore(release): bump version $current_version -> $new_version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.coverage.run]
source = ["src/docs_mcp_server"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/.tox/*",
]
branch = false
relative_files = true

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
fail_under = 95
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
title = "docs-mcp-server Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.1",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "numpy>=2.4.1",
    "pymdown-extensions>=10.20",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "vulture>=2.14",
]
docs = [
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.20",
]
